# evalyo

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
dmoj/: settings.py  urls.py
judge/: comments.py  forms.py
judge/admin/: contest.py  problem.py  profile.py  submission.py
judge/migrations/: 0153_alter_contest_format_config_and_more.py
judge/models/: contest.py
judge/utils/: raw_sql.py
judge/views/: problem.py  submission.py  ticket.py  user.py
scripts/: lint.sh
templates/comments/: list.html
